# OmniSfM

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  omnidata.py  pyproject.toml  requirements.txt
include/: CorrespondenceSearch.h  Definitions.h  Eigen.h  ImageStorage.h  PointCloud.h  SfMInitializer.h  SfMOptimizer.h  SimpleMesh.h  Utils.h  Visualization.h
scripts/: dataset.py  lol.txt  omnidata.py  process_folder.py
scripts/get_metadata/: Makefile  README.md  metadata.swift
scripts/lol/: intrinsics.txt
src/: CorrespondenceMatcher.h  CorrespondenceSearch.cpp  CorrespondenceSearch.h  ImageStorage.cpp  ImageStorage.h  NearestNeighbor.h  PointCloud.cpp  PointCloud.h  Settings.h  SfMInitializer.cpp  SfMInitializer.h  SfMOptimizer.cpp  SimpleMesh.cpp  SimpleMesh.h  Utils.h  VirtualSensor.h  Visualization.cpp  Visualization.h  settings.h
src/metadata/: README.md  get_metadata  metadata.swift  process_folder.py
src/omnidata/: blocks.py  dpt_depth.py  vit.py
